name:                gen-imports
version:             0.1.0.0
synopsis:            Code to generate instances for the package "ghc-instances"
description:
  This package just has functions to generate the files which contain import statements for all modules
  in all packages shipped with GHC. It's primary purpose is to produce instance for the package
  [ghc-instances](https://hackage.haskell.org/package/)
homepage:            https://github.com/clintonmead/gen-imports#readme
license:             BSD3
license-file:        LICENSE
author:              Clinton Mead
maintainer:          clintonmead@gmail.com
copyright:           Copyright: (c) 2017 Clinton Mead
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Distribution.Hackage.Imports.Generate
  build-depends:       base >= 4.7 && < 5, hackage-db < 2, Cabal, containers, pretty, bytestring, filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/clintonmead/gen-imports
